--- a/codeway/index.html
+++ b/codeway/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nauka HTML</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 <!-- Navigation -->
@@ -25,7 +26,7 @@
 <main> 
     <section class="section1">
         <div class="content">
-            <h1>Witaj!</h1>
+            <h1 style="font-weight: 200;">Witaj!</h1>
             <h2>Rozpocznij swoją przygodę z front-end</h2>
             <a href="#" class="dalej"><p>Zobacz teraz</p></a>     
         </div> 
@@ -35,35 +36,37 @@
         <h1>Nasz program oferuje</h1>
         <div class="section2-content">
             <div class="kursHTML" style="width: 60%;">
+                <img src="./html-logo.png" alt="logoHTML" class="logoHTML">
                 <h2>Kurs HTML</h2>
                 <p>Dzięki niemu wszystko się zaczyna! Łatwy do nauczenia język, który umożliwi Ci stworzenie własnej strony internetowej.
                 Za jego pomocą umieścisz na stronie teksty, linki, multimedia, a nawet własny program lub grę internetową. W tym kursie
                 nauczysz się projektować strony internetowe w HTML, zaczynając od prostych blogów i kończąc na profesjonalnych stronach
-                dla firm (i wiele więcej).</p>
+                dla firm (i wiele więcej).</p><br>
                 <a href="./kurs-html.html" class="read-btn">Czytaj więcej</a>
             </div>
             <div class="kursCSS" style="width: 40%;">
+                <img src="./css-logo.png" alt="logoCSS" class="logoCSS">
                 <h2>Kurs CSS</h2>
                 <p>Tło, kolor tekstu, wielkości elementów, marginesy, typ czcionki… to wszystko będziesz mógł ustawić dzięki znajomości
                 języka CSS. Twoja strona nabierze kolorów i będzie przyjemna w przeglądaniu. W tym kursie nauczysz się jak sprawić, by
-                strona wyglądała estetycznie.</p>
-               <a href="./kurs-css.html" class="read-btn">Czytaj więcej</a>
+                strona wyglądała estetycznie.</p><br>
+                <a href="./kurs-css.html" class="read-btn">Czytaj więcej</a>
             </div>
-            <div class="kursJS" style="width: 60%;">
+            <div class="kursJS" style="width: 60%; margin-top: 2%;">
+                <img src="./js-logo.png" alt="logoJS" class="logoJS">
                 <h2>Kurs JavaScript</h2>
                 <p>Znajomość tego dynamicznego języka sprawi, że twoja strona stanie się interaktywna i funkcjonalna. Nie tylko Twoja
                 strona będzie działać o wiele sprawniej i ciekawiej, ale będziesz mógł stworzyć aplikacje lub gry. W tym kursie nauczysz
-                się podstaw, które otworzą Ci bramę na nowe możliwości w programowaniu.</p>
-                <a href="kurs-js.html" class="read-btn">Czytaj więcej</a>
+                się podstaw, które otworzą Ci bramę na nowe możliwości w programowaniu.</p><br>
+                <a href="kurs-js.html" class="read-btn" >Czytaj więcej</a>
             </div>
         </div>
-        
     </section>
+</main>
 <footer>
-    <img src="logo.png" alt="logo strony">
-    <a href="portfolio.html">Poczytaj o nas :3</a>
+    <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
+    <a href="portfolio.html">Poczytaj o twórcach strony :3</a>
     <p>© Strona chroniona prawami autorskimi</p>
 </footer>
-</main>
 </body>
 </html>
