--- a/codeway/kurs-html.html
+++ b/codeway/kurs-html.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-2.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,5 +20,36 @@
             </ul>
         </nav>  
     </header>
+    <main>
+        <p>
+            <nav class="menu">
+                <h4>Menu</h4>
+                <ul class="menu-links">
+                    <li>pierwszy</li>
+                    <li>drugi</li>
+                    <li>trzeci</li>
+                    <li>czwarty</li>
+                    <li>piąty</li>
+                </ul>
+            </nav>
+        </p>
+        <p class="content">
+            <div class="course-content">
+                <h2>Czym jest język HTML?</h2>
+                <p>HTML, czyli HyperText Markup Language, to język służący do tworzenia struktur i zawartości stron internetowych. 
+                        HTML definiuje różne elementy, takie jak nagłówki, paragrafy, obrazy i linki, a także umożliwia tworzenie formularzy, 
+                        tabel i innych elementów interaktywnych na stronie internetowej. Kod HTML składa się z tagów (znaczników), 
+                        które określają, jak dany fragment tekstu lub element powinien być interpretowany przez przeglądarkę internetową.
+                        Przy użyciu HTML można również tworzyć linki, formularze, tabele i wiele innych elementów. 
+                        Jest to podstawowy język używany przy tworzeniu stron internetowych i jest często łączony z innymi technologiami, 
+                        takimi jak CSS (arkusze stylów) i JavaScript, aby uzyskać bardziej zaawansowane i interaktywne strony internetowe.</p>
+            </div>
+        </p>
+    </main>
+    <footer>
+        <img src="logo.png" alt="logo strony">
+        <a href="portfolio.html">Poczytaj o nas :3</a>
+        <p>© Strona chroniona prawami autorskimi</p>
+    </footer>
 </body>
 </html>
