--- a/codeway/index.html
+++ b/codeway/index.html
@@ -28,11 +28,11 @@
         <div class="content">
             <h1 style="font-weight: 200;">Witaj!</h1>
             <h2>Rozpocznij swoją przygodę z front-end</h2>
-            <a href="#" class="dalej"><p>Zobacz teraz</p></a>     
+            <a href="#section2" class="dalej"><p>Zobacz teraz</p></a>     
         </div> 
     </section>
 
-    <section class="section2">
+    <section id="section2">
         <h1>Nasz program oferuje</h1>
         <div class="section2-content">
             <div class="kursHTML" style="width: 60%;">
@@ -63,6 +63,7 @@
         </div>
     </section>
 </main>
+
 <footer>
     <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
     <a href="portfolio.html">Poczytaj o twórcach strony :3</a>
