--- a/codeway/kurs-html.html
+++ b/codeway/kurs-html.html
@@ -36,13 +36,17 @@
                         <li><a href="#">Akapit</a></li>
                         <li><a href="#">Pogrubienie</a></li>
                         <li><a href="#">Kursywa</a></li>
+                        <li><a href="#">Podkreślenie</a></li>
+                        <li><a href="#">Wstawianie obrazka</a></li>
+                        <li><a href="#">Odsyłacze</a></li>
+                        <li><a href="#">Nagłówki i treść</a></li>
+                        <li><a href="#">Tabele</a></li>
+                        <li><a href="#">Formularze</a></li>
+                        <li><a href="#">Widżety</a></li>
                         <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-
                     </ul>
                 </div>
-                <div class="content">
+                <div class="content-course">
                     <h1>Kurs HTML - wszystko co musisz wiedzieć, aby zacząć</h1>
                     <div id="about-html"></div>
                     <h2 style="text-align: center;">Czym jest język HTML?</h2>
