--- a/codeway/kurs-css.html
+++ b/codeway/kurs-css.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Kurs CSS - UCZSIEZNAMI</title>
 </head>
 <body>
     <header>
