--- a/codeway/index.html
+++ b/codeway/index.html
@@ -36,7 +36,7 @@
         <h1>Nasz program oferuje</h1>
         <div class="section2-content">
             <div class="kursHTML" style="width: 60%;">
-                <img src="./html-logo.png" alt="logoHTML" class="logoHTML">
+                <img src="./main-icons/html.png" alt="logoHTML" class="logoHTML">
                 <h2>Kurs HTML</h2>
                 <p>Dzięki niemu wszystko się zaczyna! Łatwy do nauczenia język, który umożliwi Ci stworzenie własnej strony internetowej.
                 Za jego pomocą umieścisz na stronie teksty, linki, multimedia, a nawet własny program lub grę internetową. W tym kursie
@@ -45,15 +45,15 @@
                 <a href="./kurs-html.html" class="read-btn">Czytaj więcej</a>
             </div>
             <div class="kursCSS" style="width: 40%;">
-                <img src="./css-logo.png" alt="logoCSS" class="logoCSS">
+                <img src="./main-icons/css.png" alt="logoCSS" class="logoCSS">
                 <h2>Kurs CSS</h2>
                 <p>Tło, kolor tekstu, wielkości elementów, marginesy, typ czcionki… to wszystko będziesz mógł ustawić dzięki znajomości
                 języka CSS. Twoja strona nabierze kolorów i będzie przyjemna w przeglądaniu. W tym kursie nauczysz się jak sprawić, by
                 strona wyglądała estetycznie.</p><br>
                 <a href="./kurs-css.html" class="read-btn">Czytaj więcej</a>
             </div>
-            <div class="kursJS" style="width: 60%; margin-top: 2%;">
-                <img src="./js-logo.png" alt="logoJS" class="logoJS">
+            <div class="kursJS" style="width: 60%;">
+                <img src="./main-icons/js.png" alt="logoJS" class="logoJS" style="margin-bottom: 40px;">
                 <h2>Kurs JavaScript</h2>
                 <p>Znajomość tego dynamicznego języka sprawi, że twoja strona stanie się interaktywna i funkcjonalna. Nie tylko Twoja
                 strona będzie działać o wiele sprawniej i ciekawiej, ale będziesz mógł stworzyć aplikacje lub gry. W tym kursie nauczysz
