--- a/codeway/kurs-css.html
+++ b/codeway/kurs-css.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/atom-one-dark.min.css">
+
     <title>Kurs CSS - UCZSIEZNAMI</title>
 </head>
 <body>
@@ -19,5 +22,25 @@
             </ul>
         </nav>  
     </header>
+    <main>
+        <div class="wrapper">
+            <div class="columns">
+                <nav>
+                    <div class="side-menu">
+                        <h4>Nawigator</h4>
+                        <ul class="menu-links">
+                            <li><a href="#about-html">CSS - wprowadzenie</a></li>
+                            <li><a href="#">Składnia</a></li>
+                            <li><a href="#">Selektory</a></li>
+                            <li><a href="#">Kaskada</a></li>
+                            <li><a href="#">Własnośći</a></li>
+                            <li><a href="#">Dziedziczenie</a></li>
+                            <li><a href="#">Media</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
