--- a/codeway/index.html
+++ b/codeway/index.html
@@ -28,7 +28,7 @@
         <div class="content">
             <h1 style="font-weight: 200;">Witaj!</h1>
             <h2>Rozpocznij swoją przygodę z front-end</h2>
-            <a href="#section2" class="dalej"><p>Zobacz teraz</p></a>     
+            <a href="#section2"><p><b>Zobacz teraz</b></p></a>     
         </div> 
     </section>
 
