--- a/codeway/kurs-css.html
+++ b/codeway/kurs-css.html
@@ -29,16 +29,25 @@
                     <div class="side-menu">
                         <h4>Nawigator</h4>
                         <ul class="menu-links">
-                            <li><a href="#about-html">CSS - wprowadzenie</a></li>
-                            <li><a href="#">Składnia</a></li>
-                            <li><a href="#">Selektory</a></li>
-                            <li><a href="#">Kaskada</a></li>
-                            <li><a href="#">Własnośći</a></li>
-                            <li><a href="#">Dziedziczenie</a></li>
-                            <li><a href="#">Media</a></li>
+                            <li><a href="#wprowadzenie" class="navigate">CSS - wprowadzenie</a></li>
+                            <li><a href="#skladnia" class="navigate">Składnia</a></li>
+                            <li><a href="#selektory" class="navigate">Selektory</a></li>
+                            <li><a href="#" class="navigate">Kaskada</a></li>
+                            <li><a href="#" class="navigate">Własnośći</a></li>
+                            <li><a href="#" class="navigate">Dziedziczenie</a></li>
+                            <li><a href="#" class="navigate">Media</a></li>
                         </ul>
                     </div>
                 </nav>
+                <div class="content-course">
+                    <div id="wprowadzenie">
+                        <h1>Kurs CSS - by Twoja strona stała się piękniejsza</h1>
+                        <h2 style="text-align: center;">1. Czym jest język CSS?</h2>
+                        <p>CSS, czyli Cascading Style Sheets, to język służący nadawaniu stronie stylu. Umożliwia zmiane wyglądu, w którego skład wchodzi kolor czcionki, tło, </p><br>
+                    </div>
+                    <div id="skladnia"></div>
+                    <div id="selektory"></div>
+                </div>
             </div>
         </div>
     </main>
