--- a/codeway/kurs-css.html
+++ b/codeway/kurs-css.html
@@ -30,11 +30,17 @@
                         <h4>Nawigator</h4>
                         <ul class="menu-links">
                             <li><a href="#wprowadzenie" class="navigate">CSS - wprowadzenie</a></li>
-                            <li><a href="#skladnia" class="navigate">Składnia</a></li>
+                            <li><a href="#model" class="navigate">Model</a></li>
                             <li><a href="#selektory" class="navigate">Selektory</a></li>
-                            <li><a href="#" class="navigate">Kaskada</a></li>
-                            <li><a href="#" class="navigate">Własnośći</a></li>
-                            <li><a href="#" class="navigate">Dziedziczenie</a></li>
+                            <li><a href="#kolory" class="navigate">Kolory</a></li>
+                            <li><a href="#wlasnosci" class="navigate">Własnośći</a></li>
+                            <li><a href="#marginesy" class="navigate">Margines</a>
+                                <ul class="tag-list">
+                                    <li><a href="#wewnetrzne">Wewnętrzny</a></li>
+                                    <li><a href="#zewnterzne">Zewnętrzny</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#dziedziczenie" class="navigate">Dziedziczenie</a></li>
                             <li><a href="#" class="navigate">Media</a></li>
                         </ul>
                     </div>
@@ -43,13 +49,41 @@
                     <div id="wprowadzenie">
                         <h1>Kurs CSS - by Twoja strona stała się piękniejsza</h1>
                         <h2 style="text-align: center;">1. Czym jest język CSS?</h2>
-                        <p>CSS, czyli Cascading Style Sheets, to język służący nadawaniu stronie stylu. Umożliwia zmiane wyglądu, w którego skład wchodzi kolor czcionki, tło, </p><br>
+                        <p>CSS (Cascading Style Sheets) jest językiem używanym do opisu prezentacji i formatowania dokumentów HTML (Hypertext Markup Language). 
+                            Jest on używany do dodawania kolorów, czcionek, układu i innych stylów do stron internetowych. 
+                            CSS jest potężnym narzędziem, które pozwala programistom na oddzielenie stylu strony internetowej od jej zawartości, co ułatwia jej utrzymanie i aktualizację. 
+                            Dzięki CSS, projektanci mogą kontrolować wygląd tekstu, obrazów i innych elementów na stronie internetowej, czyniąc ją bardziej atrakcyjną wizualnie i łatwą do odczytania.
+                            CSS używa zestawu selektorów i par właściwość-wartość do definiowania reguł stylu dla różnych elementów na stronie internetowej.
+                            Język ten jest stale rozwijany, a nowe funkcje są dodawane regularnie, aby poprawić doświadczenie użytkownika i wspierać nowoczesne trendy w projektowaniu.
+                            </p><br>
                     </div>
-                    <div id="skladnia"></div>
+                    <div id="model">
+                        <h2>2. Model CSS</h2>
+                        <p>Poniżej kod HTML, który zostanie poddany obróbce</p>
+                        <pre>
+                            <code>&lt;p&gt;To jest paragraf, który dostanie trochę nowego wyglądu&lt;/p&gt;</code>
+                        </pre>
+                        <p>A tu arkusz CSS, który nada mu stylu:</p>
+                        <pre>
+                            <code></code>
+                        </pre>
+                    </div>
                     <div id="selektory"></div>
+                    <div id="kaskada"></div>
+                    <div id="kolory"></div>
+                    <div id="wlasnosci"></div>
+                    <div id="marginesy"></div>
+                    <div id="dziedziczenie"></div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
+        <a href="portfolio.html">Poczytaj o twórcach strony :3</a>
+        <p>© Strona chroniona prawami autorskimi</p>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>
