--- a/codeway/kurs-html.html
+++ b/codeway/kurs-html.html
@@ -23,7 +23,7 @@
         </nav>  
     </header>
     <main>
-        <div class="wrapper">
+        <section class="wrapper">
             <div class="columns">
                 <nav>
                     <div class="side-menu">
@@ -216,7 +216,7 @@ Normalny tekst</code>
                 </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
