--- a/codeway/kurs-js.html
+++ b/codeway/kurs-js.html
@@ -22,8 +22,28 @@
         </nav>  
     </header>
     <main>
-        
+        <section class="wrapper">
+            <div class="columns">
+                <nav>
+                    <div class="side-menu">
+                        <h4>Nawigator</h4>
+                        <ul class="menu-links">
+                            <li><a href="#" class="navigate">JavaScript - wprowadzenie</a></li>
+                            <li><a href="#" class="navigate">Zmienne</a></li>
+                            <li><a href="#" class="navigate">String - teksty</a></li>
+                            <li><a href="#" class="navigate">Pętla for</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            <div class="content-course">
+                <div class="about-js"></div>
+                <h1>Kurs JS - wszystko co musisz wiedzieć, aby zacząć</h1>
+                <h2 style="text-align: center;">1. Trochę słów o JavaScript</h2>
+            </div>
+        </section>
+        </div>
     </main>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
