--- a/codeway/index.html
+++ b/codeway/index.html
@@ -24,16 +24,18 @@
 <!-- End Navigation -->
 <!-- Welcome banner -->
 <main> 
-    <section class="section1">
-        <div class="content">
-            <h1 style="font-weight: 200;">Witaj!</h1>
-            <h2>Rozpocznij swoją przygodę z front-end</h2>
-            <a href="#section2"><p><b>Zobacz teraz</b></p></a>     
-        </div> 
-    </section>
+    <main>
+        <section class="section1">
+          <p>
+            <h1 style="color:black; font-family: Fira Sans, sans-serif;">
+            <b>Witaj!<br>
+            Rozpocznij swoją przygodę z front-end</h1></b>
+            </p>
+          <a href="#section2" class="dalej">Zobacz teraz</a>
+        </section>
 
     <section id="section2">
-        <h1>Nasz program oferuje</h1>
+        <h1><b>Nasz program oferuje</b> </h1>
         <div class="section2-content">
             <div class="kursHTML" style="width: 60%;">
                 <img src="./main-icons/html.png" alt="logoHTML" class="logoHTML">
@@ -65,8 +67,8 @@
 </main>
 
 <footer>
-    <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
-    <a href="portfolio.html">Poczytaj o twórcach strony :3</a>
+    <a href="./index.html" id="logo"><img src="logo.png" alt="logo strony" ></a>
+    <a href="portfolio.html" >Poczytaj o twórcach strony :3</a>
     <p>© Strona chroniona prawami autorskimi</p>
 </footer>
 </body>
