--- a/codeway/kurs-html.html
+++ b/codeway/kurs-html.html
@@ -92,8 +92,7 @@
         &lt;/footer&gt;
     &lt;/body&gt;
 &lt;/html&gt;
-                    
-                            </code>
+                    </code>
                         </pre>
                         <div>
                             
@@ -219,7 +218,7 @@ Normalny tekst</code>
         </section>
     </main>
     <footer>
-        <a href="./index.html"><img src="logo.png" alt="logo strony"></a>
+        <a href="./index.html" id="logo"><img src="logo.png" alt="logo strony"></a>
         <a href="portfolio.html">Poczytaj o twórcach strony :3</a>
         <p>© Strona chroniona prawami autorskimi</p>
     </footer>
